@@ -15,6 +15,8 @@
 - Float type recognition is more robust, now handled using a regexp
 - Date type recognition is more robust, now using a combination of regexp plus date object
 - Parsing of strings representing dates is now cached, eliminating the need for double parse
+- Restyle of the GUI
+- Adds history in the GUI
 
 0.11
 - Font is set only on windows (Rev 206)
